# cookiecutter-mopidy-ext

./: .gitignore  README.md  README.rst  cookiecutter.json  copier.yaml  test-render.py  test.py
.github/workflows/: ci.yml
template/: CHANGELOG.rst.jinja  README.md.jinja  README.rst.jinja  pyproject.toml.jinja  setup.cfg.jinja  tox.ini.jinja
template/.github/workflows/: ci.yml  release.yml.jinja
template/src/mopidy_{{ ext_name }}/: __init__.py.jinja  ext.conf.jinja
template/tests/: test_extension.py.jinja
{{cookiecutter.dist_name|lower}}/mopidy_{{cookiecutter.ext_name}}/: ext.conf
{{cookiecutter.repo_name}}/: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/.circleci/: config.yml
{{cookiecutter.repo_name}}/.github/workflows/: ci.yml  release.yml
{{cookiecutter.repo_name}}/mopidy_{{cookiecutter.ext_name}}/: __init__.py
{{cookiecutter.repo_name}}/tests/: test_extension.py
