[metadata]
name = {{ cookiecutter.dist_name }}
version = attr: mopidy_{{ cookiecutter.ext_name }}.__version__
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.dist_name|lower }}
project_urls =
    Source = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.dist_name|lower }}
    Issues = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.dist_name|lower }}/issues
author = {{ cookiecutter.author_full_name }}
author_email = {{ cookiecutter.author_email }}
license = Apache License, Version 2.0
license_file = LICENSE
description = {{ cookiecutter.short_description }}
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.0.0a3  # Change to >= 3.0 once final is released
    Pykka >= 2.0
    setuptools


[options.extras_require]
lint =
    check-manifest
    flake8
    flake8-import-order
release =
    twine
    wheel
test =
    pytest
    pytest-cov
dev =
    %(lint)s
    %(release)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    {{ cookiecutter.ext_name }} = mopidy_{{ cookiecutter.ext_name }}:Extension


[bdist_wheel]
universal = 1


[flake8]
application-import-names = mopidy_{{ cookiecutter.ext_name }},tests
exclude = .git, .tox, build
